# wattswarm

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  LICENSING.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.wattetheria.yml  docker-compose.yml
.cargo/: config.local.toml.example
.config/: nextest.toml
.github/workflows/: publish-ghcr.yml  test-report.yml
apps/cli/: cli.rs
apps/wattswarm/: Cargo.toml  build.rs
apps/wattswarm-cli/: cli.rs
apps/wattswarm-runtime/: Cargo.toml
apps/wattswarm-runtime/src/: main.rs
apps/wattswarm/proto/: wattetheria_sync.proto
apps/wattswarm/src/: a2a.rs  ap2.rs  egress_agent.rs  lib.rs  main.rs  network_hooks.rs  run_control.rs  startup_config.rs  wattetheria_sync.rs
apps/wattswarm/src/http/: background.rs  diagnostics.rs  discovery.rs  egress.rs  executors.rs  helpers.rs  mod.rs  network_bootstrap.rs  node.rs  pages.rs  peers.rs  runs.rs  server.rs  startup.rs  swarm.rs  tasks.rs  topics.rs
apps/wattswarm/tests/: cli_smoke.rs  crypto_unit.rs  policy_unit.rs  reason_codes_unit.rs  task_template_unit.rs  ui_api.rs  wattswarm_integration.rs
apps/wattswarm/tests/ui_api/: ui_api_agent_sync_tests.rs  ui_api_basic_tests.rs  ui_api_runqueue_tests.rs  ui_api_startup_tests.rs  ui_api_tail_tests.rs  ui_api_topic_tests.rs
apps/wattswarm/tests/wattswarm_integration/: ws_integration_epoch_tests.rs  ws_integration_execution_tests.rs  ws_integration_governance_tests.rs  ws_integration_knowledge_tests.rs  ws_integration_validation_tests.rs
crates/artifact-store/: Cargo.toml
crates/artifact-store/src/: lib.rs
crates/control-plane/: Cargo.toml
crates/control-plane/src/: control.rs  control_state.rs  lib.rs  network_bridge.rs  round_policy.rs  task_template.rs  topic_consensus.rs  topic_interpretation.rs  udp_announce.rs
crates/control-plane/src/control/: artifacts.rs  task_flow.rs
crates/control-plane/src/network_bridge/: agent_delivery.rs  announcements.rs  backfill.rs  bootstrap_contact.rs  diagnostics.rs  discovery_bootnode.rs  event_relevance.rs  mod.rs  peer_interactions.rs  publish.rs  scope.rs  service_dispatch.rs  service_loop.rs  service_ops.rs  service_runtime.rs  summary.rs  tests.rs
crates/control-plane/src/network_bridge/tests/: discovery_scope.rs  event_routing.rs  gossip_backfill.rs  governance.rs  network_substrate.rs  peer_sync.rs  subscriptions.rs  summary_observability.rs
crates/control-plane/tests/: control_and_udp_tests.rs  network_bridge_integration.rs  network_bridge_lan_integration.rs  network_bridge_local_integration.rs  network_bridge_wan_integration.rs
crates/control-plane/tests/control_and_udp_tests/: artifacts.rs  discovery_registry.rs  executor_registry.rs  network_bootstrap.rs  node_mode.rs  node_open.rs  real_task_flow.rs  remote_bridge.rs  udp.rs
crates/control-plane/tests/support/: mod.rs  network_bridge.rs
crates/control-plane/tests/support/network_bridge/: anti_entropy.rs  peer_interactions.rs  scope_routing.rs  summary_revoke.rs  sync.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/network-discovery/: Cargo.toml
crates/network-discovery/src/: lib.rs
crates/network-p2p/: Cargo.toml
crates/network-p2p/src/: iroh_runtime.rs  lib.rs
crates/network-substrate/: Cargo.toml
crates/network-substrate/src/: lib.rs  runtime.rs  tests.rs  types.rs  wire.rs
crates/network-transport-core/: Cargo.toml
crates/network-transport-core/src/: adapter.rs  error.rs  lib.rs  router.rs  types.rs
crates/network-transport-iroh/: Cargo.toml
crates/network-transport-iroh/src/: lib.rs
crates/node-core/: Cargo.toml
crates/node-core/src/: lib.rs
crates/node-core/src/node/: core.rs  knowledge.rs  mod.rs  projection.rs  validation_core.rs  validation_decide.rs
crates/policy-engine/: Cargo.toml
crates/policy-engine/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: constants.rs  error.rs  lib.rs  reason_codes.rs  types.rs
crates/protocol/tests/: types_behavior_tests.rs
crates/run-queue/: Cargo.toml
crates/run-queue/src/: lib.rs  run_queue_legacy.rs
crates/run-queue/src/run_queue/: admin_api.rs  aggregation.rs  mod.rs  network_bridge.rs  queue.rs  schema.rs  status.rs  stigmergy.rs  types.rs  utils.rs  worker.rs
crates/runtime-client/: Cargo.toml
crates/runtime-client/src/: lib.rs
crates/runtime-client/tests/: http_runtime_client_tests.rs
crates/storage-core/: Cargo.toml
crates/storage-core/src/: lib.rs
crates/storage-core/src/storage/: dashboard.rs  event_log.rs  export.rs  local_control.rs  metrics.rs  mod.rs  pg.rs  projection.rs  registry.rs  rusqlite.rs  schema.rs  sqlite_layout.rs
crates/storage-core/src/storage/projection/: candidates_votes.rs  decision_memory.rs  execution_governance.rs  settlement_reuse.rs  tasks.rs
crates/storage-core/tests/: dashboard_storage_tests.rs  event_export_storage_tests.rs  network_authority_tests.rs  pg_connection_tests.rs  scope_index_tests.rs  sqlite_connection_tests.rs
docs/: wattetheria-emergent-topic-chat-integration.md
scripts/: build-local.sh  docker-kernel-entrypoint.sh  docker-kernel-hot-entrypoint.sh  init-sqlite-fdw.sh  publish-ghcr.sh  test-report.sh  verify-release-images.sh
ui/: dashboard_engine.rs  dashboard_template.rs  index.html  startup_template.rs  theme_template.rs  ui.rs  ui_template.rs
ui/public/fonts/: OFL.txt
