[workspace]
resolver = "2"
members = [
  "crates/protocol",
  "crates/crypto",
  "crates/artifact-store",
  "crates/network-discovery",
  "crates/network-substrate",
  "crates/network-transport-core",
  "crates/network-transport-iroh",
  "crates/network-p2p",
  "crates/policy-engine",
  "crates/runtime-client",
  "crates/storage-core",
  "crates/node-core",
  "crates/control-plane",
  "crates/run-queue",
  "apps/wattswarm",
  "apps/wattswarm-runtime",
]

[workspace.dependencies]
anyhow = "1.0"
axum = "0.7"
base64 = "0.22"
bs58 = "0.5"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
hkdf = "0.12"
iroh-blobs = "0.99"
iroh-gossip = "0.97"
n0-future = "0.3"
postgres = "0.19"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_jcs = "0.2"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "net"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
tower = "0.5"

wattswarm-protocol = { path = "crates/protocol" }
wattswarm-crypto = { path = "crates/crypto" }
wattswarm-artifact-store = { path = "crates/artifact-store" }
wattswarm-network-discovery = { path = "crates/network-discovery" }
wattswarm-network-substrate = { path = "crates/network-substrate" }
wattswarm-network-transport-core = { path = "crates/network-transport-core" }
wattswarm-network-transport-iroh = { path = "crates/network-transport-iroh" }
wattswarm-network-p2p = { path = "crates/network-p2p" }
wattswarm-policy-engine = { path = "crates/policy-engine" }
wattswarm-runtime-client = { path = "crates/runtime-client" }
wattswarm-storage-core = { path = "crates/storage-core" }
wattswarm-node-core = { path = "crates/node-core" }
wattswarm-control-plane = { path = "crates/control-plane" }
wattswarm-run-queue = { path = "crates/run-queue" }
watt-did = { path = "../watt-did" }
