[package]
name = "wattswarm-runtime-app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "wattswarm-runtime"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
wattswarm = { path = "../wattswarm" }
