[package]
name = "wattswarm-control-plane"
version = "0.1.0"
edition = "2024"

[features]
default = ["discovery-udp"]
discovery-udp = []
run-queue-legacy = []

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_jcs = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
wattswarm-artifact-store = { workspace = true }
wattswarm-network-discovery = { workspace = true }
wattswarm-crypto = { workspace = true }
wattswarm-network-p2p = { workspace = true, features = ["iroh-runtime"] }
wattswarm-network-transport-core = { workspace = true }
wattswarm-network-transport-iroh = { workspace = true }
wattswarm-node-core = { workspace = true }
wattswarm-protocol = { workspace = true }
wattswarm-runtime-client = { workspace = true }
wattswarm-storage-core = { workspace = true }
