[package]
name = "wattswarm-control-plane"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[features]
default = ["discovery-udp"]
discovery-udp = []
run-queue-legacy = []

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_jcs = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
wattswarm-artifact-store = { workspace = true }
wattswarm-network-discovery = { workspace = true }
wattswarm-crypto = { workspace = true }
wattswarm-network-p2p = { workspace = true, features = ["iroh-runtime"] }
wattswarm-network-transport-core = { workspace = true }
wattswarm-network-transport-iroh = { workspace = true }
wattswarm-node-core = { workspace = true }
wattswarm-protocol = { workspace = true }
wattswarm-runtime-client = { workspace = true }
wattswarm-storage-core = { workspace = true }
watt-did = { workspace = true }

[dev-dependencies]
bs58 = { workspace = true }
ed25519-dalek = { workspace = true }
