[package]
name = "wattswarm-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
wattswarm-protocol = { workspace = true }
