[package]
name = "wattswarm-network-discovery"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_jcs = { workspace = true }
wattswarm-crypto = { workspace = true }
wattswarm-network-transport-core = { workspace = true }
