[package]
name = "wattswarm-network-p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
libp2p = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
wattswarm-protocol = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
