[package]
name = "wattswarm-network-p2p"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[features]
default = []
iroh-runtime = []

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
iroh = "0.97"
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
wattswarm-network-transport-core = { workspace = true }
wattswarm-network-substrate = { workspace = true }
wattswarm-protocol = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
wattswarm-network-transport-iroh = { workspace = true }
