[package]
name = "wattswarm-network-substrate"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
iroh = "0.97"
iroh-gossip = { workspace = true }
n0-future = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
wattswarm-network-transport-core = { workspace = true }
wattswarm-network-transport-iroh = { workspace = true }
wattswarm-protocol = { path = "../protocol" }

[dev-dependencies]
serde_json = { workspace = true }
