[package]
name = "wattswarm-network-transport-iroh"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
iroh = "0.97"
libp2p = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
wattswarm-artifact-store = { workspace = true }
wattswarm-network-transport-core = { workspace = true }

[dev-dependencies]
wattswarm-crypto = { workspace = true }
tempfile = { workspace = true }
