[package]
name = "wattswarm-network-transport-iroh"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
iroh = "0.97"
iroh-blobs = { workspace = true }
iroh-gossip = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
wattswarm-artifact-store = { workspace = true }
wattswarm-network-transport-core = { workspace = true }

[dev-dependencies]
wattswarm-crypto = { workspace = true }
n0-future = { workspace = true }
tempfile = { workspace = true }
