[package]
name = "wattswarm-node-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
wattswarm-crypto = { workspace = true }
wattswarm-policy-engine = { workspace = true }
wattswarm-protocol = { workspace = true }
wattswarm-runtime-client = { workspace = true }
wattswarm-storage-core = { workspace = true }
