[package]
name = "wattswarm-storage-core"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[features]
default = ["storage-postgres", "storage-sqlite"]
storage-postgres = []
storage-sqlite = []
test-utils = []

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
postgres = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
wattswarm-crypto = { workspace = true }
wattswarm-protocol = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
